Fixed an issue where the font was too dark.

--- a/app.css
+++ b/app.css
@@ -39,8 +39,8 @@
   --cards: #040B0F; /* Cards color */
 
   /* Fonts Color */
-  --fg: #223646; /* Foreground color */
-  --sfg: #223646; /* Secondary Foreground color */
+  --fg: #69787E; /* Foreground color */
+  --sfg: #69787E; /* Secondary Foreground color */
 
 
   /* Image background  */
